--- a/src/assets/styles/animation.scss
+++ b/src/assets/styles/animation.scss
@@ -14,3 +14,24 @@
     }
   }
 }
+
+.slideLeft {
+  &-enter {
+    opacity: 0;
+    transform: translateX(-100%);
+    &-to {
+      opacity: 1;
+      transform: translateX(0);
+      transition: all .5s ease;
+    }
+  }
+  &-leave {
+    transform: translateX(0);
+    opacity: 1;
+    &-to {
+      transform: translateX(-100%);
+      opacity: 0;
+      transition: all .5s ease;
+    }
+  }
+}
